--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".BookActivity" />
-        <activity android:name=".PageActivity"></activity>
+        <activity android:name=".PageActivity" />
+        <activity
+            android:name=".BookActivity2"
+            android:label="@string/title_activity_book2"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
