--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://dl.bintray.com/intercom/intercom-maven'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.0.0'
+
 
 
 
@@ -17,6 +21,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'https://dl.bintray.com/intercom/intercom-maven'
+        }
     }
 }
 
