--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,16 @@ dependencies {
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:cardview-v7:23.+'
+    compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'com.google.firebase:firebase-messaging:9.4.0'
+
+
+
+
     compile ('io.intercom.android:intercom-sdk:1.+@aar') {
         transitive = true
     }
 
 
 }
+apply plugin: 'com.google.gms.google-services'
