--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.draw.aidansliney.draw3">
 
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,12 +26,8 @@
             android:label="@string/title_activity_book2"
             android:theme="@style/AppTheme" />
         <activity android:name=".PageActivity"></activity>
-
-
-
-
     </application>
 
-
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 </manifest>
