--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            lintOptions {
+                checkReleaseBuilds false
+            }
         }
     }
 
 }
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -33,11 +37,6 @@ dependencies {
 
 
 
-
-    compile ('io.intercom.android:intercom-sdk:1.+@aar') {
-        transitive = true
-    }
-
-
 }
 apply plugin: 'com.google.gms.google-services'
+
