--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,22 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key'
+            keyPassword 'mECOTIN5'
+            storeFile file('/Users/aidansliney/version-control/key.jks')
+            storePassword 'mECOTIN5'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "com.learn.howtodraw.draw"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.2"
+        versionCode 3
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -20,16 +27,15 @@ android {
             }
         }
     }
-
+    dexOptions {
+        incremental true
+    }
 }
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-
-
-
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
