--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.learn.howtodraw.draw"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.3"
+        versionCode 4
+        versionName "1.4"
     }
     buildTypes {
         release {
@@ -25,7 +25,7 @@ android {
             lintOptions {
                 checkReleaseBuilds false
             }
-            debuggable true
+           /* debuggable true*/
             signingConfig signingConfigs.config
         }
     }
