--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,8 @@ android {
         applicationId "com.learn.howtodraw.draw"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 5
-        versionName "1.5"
+        versionCode 12
+        versionName "1.12"
     }
     buildTypes {
         release {
@@ -29,11 +29,8 @@ android {
             signingConfig signingConfigs.config
         }
     }
-    dexOptions {
-        incremental true
-    }
-}
 
+}
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
@@ -48,6 +45,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:9.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.google.firebase:firebase-crash:9.4.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
