--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         tools:ignore="HardcodedDebugMode"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:debuggable="true"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:largeHeap="true"
